[project]
name = "researchagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chainlit>=2.9.4",
    "environs>=14.5.0",
    "langchain>=1.2.0",
    "langchain-nvidia-ai-endpoints>=1.0.0",
    "openai>=2.14.0",
    "regex>=2025.11.3",
    "tavily>=1.1.0",
]
